# APIserver/models/model_inline_object_5.go
@@ -3,4 +3,10 @@ package models
 type InlineObject5 struct {
 
 	SessionId string `json:"session_id"`
+
+	// 最新のhaikuからN番目を起点とする（デフォルト0）
+	Start int32 `json:"start,omitempty"`
+
+	// 最新のhaikuからM番目を終点とする（デフォルト30）
+	End int32 `json:"end,omitempty"`
 }
